<resources>
    <string name="app_name">Rikiki</string>
    <string name="edit_message">Enter a value</string>
    <string name="button_new_game">New Game</string>
    <string name="display_message">Message</string>
    <string name="number_info">Please choose a number between 2 and 52</string>
    <string name="button_return">Return to Game</string>
    <string name="button_score">Scores</string>
    <string name="button_quit">Quit</string>
    <string name="button_rules">See rules</string>
    <string name="button_settings">Settings</string>
    <string name="text_get_settings_create_player">Create new player</string>
    <string name="text_existing_players">Existing Players</string>
    <string name="text_enter_name">Enter Name</string>
    <string name="button_create_player">Create!</string>
    <string name="text_selected_players">Selected Players</string>
</resources>